--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      CGO_ENABLED: 1
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -16,7 +19,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: '1.22.1'
+          go-version: '1.18'
 
       - name: Build
         run: go build -o myapp
